@@ -16,11 +16,11 @@
 #include "playlist.h"
 
 gboolean
-tag_track                               (const char        *user,
-                                         const char        *password,
-                                         const LastfmTrack *track,
-                                         request_type       type,
-                                         GSList            *tags);
+tag_track                               (const char           *user,
+                                         const char           *password,
+                                         const LastfmTrack    *track,
+                                         LastfmTrackComponent  type,
+                                         GSList               *tags);
 
 gboolean
 love_ban_track                          (const char        *user,
@@ -29,12 +29,12 @@ love_ban_track                          (const char        *user,
                                          gboolean           love);
 
 gboolean
-recommend_track                         (const char        *user,
-                                         const char        *password,
-                                         const LastfmTrack *track,
-                                         const char        *text,
-                                         request_type       type,
-                                         const char        *rcpt);
+recommend_track                         (const char           *user,
+                                         const char           *password,
+                                         const LastfmTrack    *track,
+                                         const char           *text,
+                                         LastfmTrackComponent  type,
+                                         const char           *rcpt);
 
 gboolean
 add_to_playlist                         (const char        *user,
