@@ -1,5 +1,14 @@
 2009-04-05  Alberto Garcia  <agarcia@igalia.com>
 
+	* src/playlist.h
+	* src/controller.c
+	* src/metadata.[ch]
+	* src/uimisc.[ch]
+	* src/xmlrpc.[ch]:
+	Rename request_type to LastfmTrackComponent
+
+2009-04-05  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/controller.c (finish_playing_track):
 	Love/ban rating was being reset before scrobbling a track. Fixed.
 
